# simpleSerialTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: simpleSerialTest.cpp
